[package]
name = "roaring"
version = "0.1.0"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
croaring = "0.4.5"
roaring = "0.6.1"
rand = "0.7.3"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false